examples/qasm/syntax_errors/e67.qasm
U (theta,phi, lambda
U (theta,phi, lambda) q;
